--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -25,6 +25,10 @@
         <link rel="stylesheet" href="/admin/plugins/owl.carousel/dist/assets/owl.carousel.min.css">
         <link rel="stylesheet" href="/admin/plugins/owl.carousel/dist/assets/owl.theme.default.min.css">
         <link rel="stylesheet" href="/admin/dist/css/theme.min.css">
+
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+        <link rel="stylesheet" href="/resources/demos/style.css">
+
         <script src="/admin/src/js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
 
