--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,4 +1,7 @@
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
         <script>window.jQuery || document.write('<script src="src/js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
         <script src="/admin/plugins/popper.js/dist/umd/popper.min.js"></script>
         <script src="/admin/plugins/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -18,6 +21,8 @@
         <script src="/admin/js/widgets.js"></script>
         <script src="/admin/js/charts.js"></script>
         <script src="/admin/dist/js/theme.min.js"></script>
+
+
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
