--- a/views/center/monthlyProgress/monthlyProgressFormEdit.ejs
+++ b/views/center/monthlyProgress/monthlyProgressFormEdit.ejs
@@ -3,9 +3,76 @@
     <%- include('../../includes/topbar')-%>
     <div class="page-wrap">
         <%- include('../../includes/sidebar')-%>
+
+        <%
+            //উৎপাদন (চলতি মাস)
+            var currentProductionSum = 0;
+            const currentProd = JSON.parse(monthProgress.productionCurrent)
+            currentProd.forEach(function(prodCurrent){
+                if ( prodCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                    currentProductionSum += parseInt(prodCurrent.amount)
+                }
+            })
+
+            //ডিএই চালানে প্রাপ্তি (চলতি মাস)
+            var daePraptiSum = 0;
+            const currentDaePrapti = JSON.parse(monthProgress.daePrapti)
+            currentDaePrapti.forEach(function(daePraptiCurrent){
+                if ( daePraptiCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                    daePraptiSum += parseInt(daePraptiCurrent.amount)
+                }
+            })
+
+            // বিতরণ (চলতি মাস)
+            var currentBitoronSum = 0;
+            const currBitoron = JSON.parse(monthProgress.bitoronCurrentMonth)
+            currBitoron.forEach(function(BitoCurrent){
+                if ( BitoCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                    currentBitoronSum += parseInt(BitoCurrent.amount)
+                }
+            })
+
+            // ডিএই চালানে প্রদান (চলতি মাস)
+            var currentDaeProdanSum = 0;
+            const currDaeProdan = JSON.parse(monthProgress.daeProdan)
+            currDaeProdan.forEach(function(DaeProdanCurrent){
+                if ( DaeProdanCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                    currentDaeProdanSum += parseInt(DaeProdanCurrent.amount)
+                }
+            })
+
+            // মৃত/বিনষ্ট রাইটআপ (চলতি মাস)
+            var currentMritoSum = 0;
+            const currMrito = JSON.parse(monthProgress.deadWriteup)
+            currMrito.forEach(function(MritoCurrent){
+                if ( MritoCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                    currentMritoSum += parseInt(MritoCurrent.amount)
+                }
+            })
+
+            // মজুদ ******
+            var currentMojudSum = 0;
+            const currMojud = JSON.parse(monthProgress.mojud)
+            currMojud.forEach(function(MojudCurrent){
+                if ( MojudCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                    currentMojudSum += parseInt(MojudCurrent.amount)
+                }
+            })
+
+            var montobboSum = "";
+            const currMontobbo = JSON.parse(monthProgress.comment)
+            currMontobbo.forEach(function(MontobboCurrent){
+                if ( MontobboCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                    montobboSum = MontobboCurrent.msg
+                }
+            })
+
+
+        %>
+
         <div class="main-content">
             <div class="container-fluid">
-                <h4 class="text-right"><b>Month & Year : </b><span> <%= moment().format("MMM-YYYY") %></span></h4>
+                <h4 class="text-right"><b>Month & Year : </b><span> <%= moment().locale("bn").format("ll")   %></span></h4>
                 <div class="row clearfix">
 
                     <div id="signupbox" style="margin-top:50px" class="mainbox col-md-12 col-md-offset-12 col-sm-12 col-sm-offset-12">
@@ -19,7 +86,7 @@
                                 </p>
                             </div>
                             <div class="panel-body" >
-                                <form action="/center/monthlyProgressUpdate/<%= monthProgress.id %>" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
+                                <form action="/center/monthlyProgressForms" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
                                     <div id="signupalert" style="display:none" class="alert alert-danger">
                                         <p>Error:</p>
                                         <span></span>
@@ -64,79 +131,91 @@
                                     <div class="form-row mt-3">
                                         <div class="col">
                                             <label for="productionTarget" class="col-md-3 control-label">উৎপাদন (লক্ষ্যমাত্রা)</label>
-                                            <input type="text" class="form-control" name="productionTarget" placeholder="উৎপাদন (লক্ষ্যমাত্রা)" value="<%= monthProgress.productionTarget %>" >
+                                            <input type="text" class="form-control" name="productionTarget" placeholder="উৎপাদন (লক্ষ্যমাত্রা)" value="<%= monthProgress.productionTarget %>">
                                         </div>
                                     </div>
 
                                     <div class="form-row mt-3">
                                         <div class="col">
                                             <label for="productionCurrent" class="col control-label">উৎপাদন (চলতি মাস)</label>
-                                            <input type="text" class="form-control" name="productionCurrent" placeholder="উৎপাদন (চলতি মাস)">
+                                            <div class="row">
+                                                <div class="col-3">
+                                                    <input readonly class="form-control" value="<%= currentProductionSum %> + " >
+                                                </div>
+                                                <div class="col-9">
+                                                    <input type="text" class="form-control" name="productionCurrent" placeholder="উৎপাদন (চলতি মাস)">
+                                                </div>
+                                            </div>
                                         </div>
                                         <div class="col">
-                                            <label for="productionLast" class="col control-label">উৎপাদন (পূর্বমাস পর্যন্ত)</label>
-                                            <input type="text" class="form-control" name="productionLast" placeholder="উৎপাদন (পূর্বমাস পর্যন্ত)">
+                                            <label for="daePrapti" class="col control-label">ডিএই চালানে প্রাপ্তি (চলতি মাস)</label>
+                                            <div class="row">
+                                                <div class="col-3">
+                                                    <input class="form-control" readonly type="text" value="<%= daePraptiSum %> + ">
+                                                </div>
+                                                <div class="col-9">
+                                                    <input type="text" class="form-control" name="daePrapti" placeholder="ডিএই চালানে প্রাপ্তি">
+                                                </div>
+                                            </div>
                                         </div>
-                                        <div class="col">
-                                            <label for="productionTotal" class="col control-label">মোট উৎপাদন (চলতি+পূর্ব মাস)</label>
-                                            <input type="text" class="form-control" name="productionTotal" placeholder="মোট উৎপাদন (চলতি+পূর্ব মাস)">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-row mt-3">
-                                        <div class="col">
-                                            <label for="daePrapti" class="col control-label">ডিএই চালানে প্রাপ্তি</label>
-                                            <input type="text" class="form-control" name="daePrapti" placeholder="ডিএই চালানে প্রাপ্তি">
-                                        </div>
-                                        <div class="col">
-                                            <label for="lastYear" class="col control-label">পূর্ব বছরের জের</label>
-                                            <input type="text" class="form-control" name="lastYear" placeholder="পূর্ব বছরের জের">
-                                        </div>
-                                        <div class="col">
-                                            <label for="grandTotalProduction" class="col control-label">সর্বমোট (মোট+ডিএই চালানে প্রাপ্তি+পূর্ব বছরের জের)</label>
-                                            <input type="text" class="form-control" name="grandTotalProduction" placeholder="সর্বমোট (মোট+ডিএই চালানে প্রাপ্তি+পূর্ব বছরের জের)">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-row mt-3">
                                         <div class="col">
                                             <label for="bitotonCurrentMonth" class="col control-label">বিতরণ (চলতি মাস)</label>
-                                            <input type="text" class="form-control" name="bitotonCurrentMonth" placeholder="বিতরণ (চলতি মাস)">
+                                            <div class="row">
+                                                <div class="col-3">
+                                                    <input readonly class="form-control" type="text" value="<%= currentBitoronSum %> + ">
+                                                </div>
+                                                <div class="col-9">
+                                                    <input type="text" class="form-control" name="bitotonCurrentMonth" placeholder="বিতরণ (চলতি মাস)">
+                                                </div>
+                                            </div>
+
                                         </div>
                                         <div class="col">
-                                            <label for="bitotonLastMonth" class="col control-label">বিতরণ (পূর্বমাস পর্যন্ত)</label>
-                                            <input type="text" class="form-control" name="bitotonLastMonth" placeholder="বিতরণ (পূর্বমাস পর্যন্ত)">
-                                        </div>
-                                        <div class="col">
-                                            <label for="bitoronTotal" class="col control-label">বিতরণ মোট (চলতি+পূর্ব মাস)</label>
-                                            <input type="text" class="form-control" name="bitoronTotal" placeholder="বিতরণ মোট (চলতি+পূর্ব মাস)">
+                                            <label for="daeProdan" class="col control-label">ডিএই চালানে প্রদান (চলতি মাস)</label>
+                                            <div class="row">
+                                                <div class="col-3">
+                                                    <input readonly class="form-control" type="text" value="<%= currentDaeProdanSum %> +">
+                                                </div>
+                                                <div class="col-9">
+                                                    <input type="text" class="form-control" name="daeProdan" placeholder="ডিএই চালানে প্রদান">
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
 
                                     <div class="form-row mt-3">
-                                        <div class="col">
-                                            <label for="daeProdan" class="col control-label">ডিএই চালানে প্রদান</label>
-                                            <input type="text" class="form-control" name="daeProdan" placeholder="ডিএই চালানে প্রদান">
-                                        </div>
-                                        <div class="col">
-                                            <label for="deadWriteup" class="col control-label">মৃত/বিনষ্ট রাইটআপ</label>
-                                            <input type="text" class="form-control" name="deadWriteup" placeholder="মৃত/বিনষ্ট রাইটআপ">
-                                        </div>
-                                        <div class="col">
-                                            <label for="grandTotalBitoron" class="col control-label">সর্বমোট (মোট+ডিএই চালানে প্রদান+মৃত/বিনষ্ট রাইটআপ)</label>
-                                            <input type="text" class="form-control" name="grandTotalBitoron" placeholder="সর্বমোট (মোট+ডিএই চালানে প্রদান+মৃত/বিনষ্ট রাইটআপ)">
-                                        </div>
-                                    </div>
 
-                                    <div class="form-row mt-3">
                                         <div class="col">
-                                            <label for="mojud" class="col-md-3 control-label">নীট মজুদ</label>
-                                            <input type="text" class="form-control" name="mojud" placeholder="নীট মজুদ">
+                                            <label for="deadWriteup" class="col control-label">মৃত/বিনষ্ট রাইটআপ (চলতি মাস)</label>
+                                            <div class="row">
+                                                <div class="col-3">
+                                                    <input type="text" value="<%= currentMritoSum %> + " readonly class="form-control">
+                                                </div>
+                                                <div class="col-9">
+                                                    <input type="text" class="form-control" name="deadWriteup" placeholder="মৃত/বিনষ্ট রাইটআপ">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col">
+                                            <label for="mojud" class="col control-label">নীট মজুদ (চলতি মাস)</label>
+                                            <div class="row">
+                                                <div class="col-3">
+                                                    <input type="text" value="<%= currentMojudSum %> + " readonly class="form-control">
+                                                </div>
+                                                <div class="col-9">
+                                                    <input type="text" class="form-control" name="mojud" placeholder="নীট মজুদ">
+                                                </div>
+                                            </div>
                                         </div>
                                         <div class="col">
                                             <label for="comment" class="col-md-3 control-label">মন্তব্য</label>
-                                            <input type="text" class="form-control" name="comment" placeholder="মন্তব্য">
+                                            <input type="text" class="form-control" name="comment" placeholder="মন্তব্য" value="<%= montobboSum %>">
                                         </div>
+
+                                    </div>
+
+                                    <div class="form-row mt-3">
+
                                         <div class="col">
                                             <label for="year" class="col-md-3 control-label">বছর</label>
                                             <input type="text" class="form-control" name="year" placeholder="বছর">
