--- a/views/center/monthlyProgress/monthlyProgressTable.ejs
+++ b/views/center/monthlyProgress/monthlyProgressTable.ejs
@@ -28,27 +28,101 @@
         <% records.forEach(function(row){ %>
 
             <%
+                const currentMonth = moment().format("MMM-YYYY").toLowerCase();
+                var startRange = "";
+                var endRange = "";
+                if (moment().format("M") < 7){
+                    startRange = "jul"+"-"+moment().subtract(1, "year").format('yyyy')
+                    endRange = "jul"+"-"+moment().format('yyyy')
+                }else{
+                    startRange = "jul"+"-"+moment().format('yyyy')
+                    endRange = "jul"+"-"+moment().add(1, "year").format('yyyy')
+                }
+
+                // current production (  উৎপাদন  )*******
                 var currentProductionSum = 0;
                 var previousMonthProduction = 0;
-                var totalProductionSum = 0;
                 const currentProd = JSON.parse(row.productionCurrent)
                 currentProd.forEach(function(prodCurrent){
                     if ( prodCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
                         currentProductionSum += parseInt(prodCurrent.amount)
-                        totalProductionSum += parseInt(prodCurrent.amount)
                     }
-                    else if ( prodCurrent.time !== moment().format("MMM-YYYY").toLowerCase() ){
+                    else if ( moment( prodCurrent.time ).isAfter(startRange) &&  moment( prodCurrent.time ).isBefore(endRange) ){
                         previousMonthProduction += parseInt(prodCurrent.amount)
-                        totalProductionSum += parseInt(prodCurrent.amount)
-                    }
-                    else{
-
                     }
                 })
+
+                // মোট উৎপাদন (চলতি+পূর্ব মাস)
+                var totalProductionSum = 0;
+                const TotalProduction = JSON.parse(row.productionTotal)
+                TotalProduction.forEach(function(prodTotal){
+                    if ( moment(currentMonth).isAfter(prodTotal.startTime) &&  moment(currentMonth).isBefore(prodTotal.endTime) ){
+                        totalProductionSum += parseInt(prodTotal.amount)
+                    }
+                })
+
+                //  বিতরণ ********
+                var currentBitoronSum = 0;
+                var previousMonthBitoronSum = 0;
+                const currBitoron = JSON.parse(row.bitoronCurrentMonth)
+                currBitoron.forEach(function(BitoCurrent){
+                    if ( BitoCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                        currentBitoronSum += parseInt(BitoCurrent.amount)
+                    }
+                    else if ( moment( BitoCurrent.time ).isAfter(startRange) &&  moment( BitoCurrent.time ).isBefore(endRange) ){
+                        previousMonthBitoronSum += parseInt(BitoCurrent.amount)
+                    }
+                })
+
+                // মোট বিতরণ ******
+                var totalBitoronSum = 0;
+                const TotalBitoron = JSON.parse(row.bitoronTotal)
+                TotalBitoron.forEach(function(bitorTotal){
+                    if ( moment(currentMonth).isAfter(bitorTotal.startTime) &&  moment(currentMonth).isBefore(bitorTotal.endTime) ){
+                        totalBitoronSum += parseInt(bitorTotal.amount)
+                    }
+                })
+
+                // ডিএই চালানে প্রদান
+                var currentDaeProdanSum = 0;
+                const currDaeProdan = JSON.parse(row.daeProdan)
+                currDaeProdan.forEach(function(DaeProdanCurrent){
+                    if ( DaeProdanCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                        currentDaeProdanSum += parseInt(DaeProdanCurrent.amount)
+                    }
+                })
+
+                // মৃত/বিনষ্ট
+                var currentMritoSum = 0;
+                const currMrito = JSON.parse(row.deadWriteup)
+                currMrito.forEach(function(MritoCurrent){
+                    if ( MritoCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                        currentMritoSum += parseInt(MritoCurrent.amount)
+                    }
+                })
+
+                // মজুদ ******
+                var currentMojudSum = 0;
+                const currMojud = JSON.parse(row.mojud)
+                currMojud.forEach(function(MojudCurrent){
+                    if ( MojudCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                        currentMojudSum += parseInt(MojudCurrent.amount)
+                    }
+                })
+
+                // মন্তব্য *********
+                var montobboSum = "";
+                const currMontobbo = JSON.parse(row.comment)
+                currMontobbo.forEach(function(MontobboCurrent){
+                    if ( MontobboCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                        montobboSum = MontobboCurrent.msg
+                    }
+                })
+
             %>
 
             <tr>
-                <td><%= row.category %></td>
+                <td> <%= row.category %></td>
                 <td><%= row.subCategory %></td>
                 <td><%= row.biboron %></td>
                 <td><%= row.breed %></td>
@@ -61,14 +135,14 @@
                 <td><%= row.daePrapti %></td>
                 <td><%= row.lastYear %></td>
                 <td><%= row.grandTotalProduction %></td>
-                <td><%= row.bitoronCurrentMonth %></td>
-                <td><%= row.bitoronLastMonth %></td>
-                <td><%= row.bitoronTotal %></td>
-                <td><%= row.daeProdan %></td>
-                <td><%= row.deadWriteup %></td>
-                <td><%= row.grandTotalBitoron %></td>
-                <td><%= row.mojud %></td>
-                <td><%= row.comment %></td>
+                <td><%= new Number(currentBitoronSum).toLocaleString("bn-BD") %></td>
+                <td><%= new Number(previousMonthBitoronSum).toLocaleString("bn-BD") %></td>
+                <td><%= new Number(totalBitoronSum).toLocaleString("bn-BD") %></td>
+                <td><%= new Number(currentDaeProdanSum).toLocaleString("bn-BD") %></td>
+                <td><%= new Number(currentMritoSum).toLocaleString("bn-BD") %></td>
+                <td><%= new Number(currentDaeProdanSum + currentMritoSum).toLocaleString("bn-BD") %></td>
+                <td><%= new Number(currentMojudSum).toLocaleString("bn-BD") %></td>
+                <td><%= montobboSum %></td>
                 <td><a class="btn btn-primary btn-xs" href="/center/monthlyProgressEdit/<%= row.id %>"><i class="fa fa-edit"></i></a>
                     <a class="btn btn-danger btn-xs" href="/delete/<%= row.id %>"><i class="fa fa-trash"></i></a>
                 </td>
