--- a/views/center/dashboard.ejs
+++ b/views/center/dashboard.ejs
@@ -15,7 +15,7 @@
                                         <div class="d-flex justify-content-between align-items-center">
                                             <div class="state">
                                                 <h6>চারা উৎপাদন</h6>
-                                                <h4>৯০,০০০</h4>
+                                                <h4><%= new Number(totalProduction).toLocaleString("bn-BD") %></h4>
                                             </div>
                                             <div class="icon">
                                                 <i class="ik ik-award"></i>
@@ -32,7 +32,7 @@
                                         <div class="d-flex justify-content-between align-items-center">
                                             <div class="state">
                                                 <h6>চারা বিতরণ</h6>
-                                                <h4>৫০,০০০ </h4>
+                                                <h4> <%= new Number(totalBitoron).toLocaleString("bn-BD") %> </h4>
                                             </div>
                                             <div class="icon">
                                                 <i class="ik ik-award"></i>
@@ -49,7 +49,7 @@
                                         <div class="d-flex justify-content-between align-items-center">
                                             <div class="state">
                                                 <h6>চারা সংরক্ষণ/মজুদ</h6>
-                                                <h4>৪০,০০০</h4>
+                                                <h4><%= new Number(totalMojud).toLocaleString("bn-BD") %></h4>
                                             </div>
                                             <div class="icon">
                                                 <i class="ik ik-award"></i>
